--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -6,8 +6,8 @@
 	align-items: center;
 	align-content: center;
 }
-.text {
+ .text {
 	width: 30vw;
-	/* word-break:break-all; */
+	word-break:break-all;
 	font-family: Arial, Helvetica, sans-serif;
 }
