--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,3 +1,5 @@
+$nord-white: #eceff4;
+
 .container {
 	display: flex;
 	flex-direction: row;
@@ -6,8 +8,20 @@
 	align-items: center;
 	align-content: center;
 }
- .text {
+
+.text {
 	width: 30vw;
-	word-break:break-all;
+	word-break: break-all;
 	font-family: Arial, Helvetica, sans-serif;
 }
+
+.test {
+	.v-field {
+		background-color: $nord-white;
+	}
+}
+
+.v-btn.testbtn {
+	background-color: $nord-white;
+}
+
