--- a/src/styles/textViewer.scss
+++ b/src/styles/textViewer.scss
@@ -6,9 +6,21 @@
     line-height: 1.2;
     overflow-y: scroll;
     max-height: 92vh;
+    text-align: justify;
 }
 
-.editor {
+.editing {
     overflow-y: scroll;
     max-height: 92vh;
+}
+
+.viewing {
+    margin: 100px;
+    max-height: 100%;
+}
+
+.toggleEditor {
+    position: fixed;
+    top: 10px;
+    right: 10px;
 }
