--- a/src/styles/textViewer.scss
+++ b/src/styles/textViewer.scss
@@ -30,3 +30,10 @@
     top: 10px;
     left: 10px;
 }
+
+.selectSession {
+    position: absolute;
+    top: 10px;
+    width: 260px;
+    left: calc(50vw - 130px);
+}
