feat: minor updates and fixes

--- a/src/styles/textViewer.scss
+++ b/src/styles/textViewer.scss
@@ -27,13 +27,13 @@
 
 .toggleUpdates {
     position: fixed;
-    top: 10px;
+    top: 58px;
     left: 10px;
 }
 
 .selectSession {
-    position: absolute;
+    position: fixed;
     top: 10px;
-    width: 260px;
-    left: calc(50vw - 130px);
+    width: 176px;
+    left: 10px;
 }
